# storage

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
client/: .gitlab-ci.yml  Cargo.toml  Makefile
client/data/: manifest.json
client/scripts/: ipfs-start.sh  ipfs-upload-test.sh
client/src/: lib.rs  manifest.rs  stream.rs  tests.rs  types.rs
client/src/keys/: macros.rs
client/src/stream/: chacha20.rs  count.rs  ed25519.rs
migrations/: 1634855695_initial.sql  20220505221359_v2.sql  20220714191350_lock.sql
scripts/: entrypoint.sh  latest.sh  upload.rb  upload.sh
src/: api.rs  chacha20.rs  db.rs  ed25519.rs  info.rs  ipfs.rs  keys.rs  lib.rs  main.rs  manifest.rs  snapshot.rs  stream.rs  tests.rs  types.rs  volume.rs
src/keys/: macros.rs  mod.rs
src/stream/: count.rs  ed25519.rs
tool/: Cargo.toml
tool/src/: main.rs
