[package]
name = "storage-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.2", default-features = false, features = ["stream", "rustls-tls", "json"] }
url = "2.2.1"
serde = { version = "1.0.124", features = ["derive"] }
async-trait = "0.1.48"
anyhow = "1.0.38"
structopt = { version = "0.3.21", optional = true }
tokio = { version = "1.3.0", optional = true }
byteorder = "1.4.3"
tokio-util = { version = "0.6.5", optional = true }
tokio-stream = { version = "0.1.5", optional = true }
bytes = "1.1.0"
futures = "0.3.21"
log = "0.4.14"
chacha20 = "0.8.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek-fiat = "0.1.0"
blake2 = "0.10.4"
thiserror = "1.0.30"
env_logger = { version = "0.9.0", optional = true }
paste = "1.0.7"
zeroize = "1.5.4"
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.13.0", optional = true }
base32 = { version = "0.4.0", optional = true }
uuid = { version = "0.8.2", features = ["serde"] }
ipfs-api = { version = "0.15.0", git = "https://github.com/xfbs/rust-ipfs-api" }

[features]
default = ["tokio", "tokio-util/io", "tokio-util/compat", "tokio-stream", "hex"]
api = []
client = ["structopt", "tokio/rt-multi-thread", "tokio/macros", "tokio/io-std", "tokio/fs", "env_logger"]

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"] }

[[bin]]
name = "client"
required-features = ["client"]
