[package]
name = "storage-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.2", default-features = false, features = ["stream", "rustls-tls", "json"] }
url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive"] }
async-trait = "0.1.48"
anyhow = "1.0.38"
tokio = { version = "1.3.0", optional = true }
byteorder = "1.4.3"
tokio-util = { version = "0.6.5", optional = true }
tokio-stream = { version = "0.1.5", optional = true }
bytes = "1.1.0"
futures = "0.3.21"
log = "0.4.14"
chacha20 = "0.8.0"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek-fiat = "0.1.0"
blake2 = "0.10.4"
thiserror = "1.0.30"
paste = "1.0.7"
zeroize = "1.5.4"
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.13.0", optional = true }
base32 = { version = "0.4.0", optional = true }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
ipfs-api = { version = "0.15.0", git = "https://github.com/xfbs/rust-ipfs-api" }
ipfs-api-backend-hyper = { version = "0.4.0", git = "https://github.com/xfbs/rust-ipfs-api", features = ["with-send-sync"] }
cid = { version = "0.8.4", features = ["serde-codec"] }
bincode = "1.3.3"
rocket = { version = "0.5.0-rc.1", optional = true }

[features]
default = ["tokio", "tokio-util/io", "tokio-util/compat", "tokio-stream", "hex", "base64"]
api = []

[dev-dependencies]
serde_test = "1.0.136"
tokio = { version = "1.3.0", features = ["full"] }

[workspace]
members = [".", "tool"]

[patch.crates-io]
common-multipart-rfc7578 = { git = "https://github.com/xfbs/rust-multipart-rfc7578" }
