[package]
name = "fractal-storage"
version = "0.2.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
structopt = "0.3.21"
anyhow = "1.0.38"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "any", "postgres" ] }
env_logger = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1.3.0", features = ["fs"] }
log = "0.4.14"
byteorder = "1.4.3"
fractal-storage-client = { path = "./client", features = ["rocket"] }
rust-s3 = { version = "0.28.0", default-features = false, features = ["tokio-rustls-tls", "tags"], optional = true }
fractal-auth-client = { git = "https://gitlab.com/fractalnetworks/libraries/auth-client", features = ["rocket", "static-tokens"] }
url = "2.2.2"
thiserror = "1.0.31"
uuid = { version = "1.0.0", features = ["v4"] }
async-trait = "0.1.53"
base64 = "0.13.0"
hex = "0.4.3"
optional-field = "0.1.2"

[features]
default = ["backend-local", "insecure-auth"]
backend-local = []
backend-s3 = ["rust-s3"]
insecure-auth = ["fractal-auth-client/insecure-stub"]

[dev-dependencies]
rand = "0.8.5"
reqwest = "0.11.10"

[workspace]
members = [".", "client", "tool"]

[patch.crates-io]
common-multipart-rfc7578 = { git = "https://github.com/xfbs/rust-multipart-rfc7578" }
