[package]
name = "fractal-storage-client"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
base32 = { version = "0.4.0", optional = true }
base64 = { version = "0.13.0", optional = true }
bincode = "1.3.3"
blake2 = "0.10.4"
byteorder = "1.4.3"
bytes = "1.1.0"
chacha20 = "0.8.0"
cid = { version = "0.8.5", features = ["serde-codec"] }
ed25519-dalek-fiat = "0.1.0"
futures = "0.3.21"
hex = { version = "0.4.3", optional = true }
ipfs-api = { version = "0.15.0", git = "https://github.com/xfbs/rust-ipfs-api" }
ipfs-api-backend-hyper = { version = "0.4.0", git = "https://github.com/xfbs/rust-ipfs-api", features = ["with-send-sync"] }
log = "0.4.17"
optional-field = "0.1.2"
paste = "1.0.7"
rand_core = { version = "0.6.3", features = ["getrandom"] }
reqwest = { version = "0.11.10", default-features = false, features = ["stream", "rustls-tls", "json"] }
rocket = { version = "0.5.0-rc", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde-big-array = "0.4.1"
sha2 = "0.10.2"
thiserror = "1.0.31"
tokio = { version = "1.19.2" }
tokio-stream = { version = "0.1.9" }
tokio-util = { version = "0.7.3", features = ["io", "compat"] }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.1.1", features = ["serde", "v4"] }
zeroize = "1.5.5"

[features]
default = ["hex", "base64"]

[dev-dependencies]
serde_test = "1.0.137"
tokio = { version = "1.19.2", features = ["full"] }
