[package]
name = "storage-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
cid = "0.8.4"
env_logger = "0.9.0"
futures = "0.3.21"
reqwest = "0.11.10"
storage-api = { path = ".." }
structopt = "0.3.26"
tokio = { version = "1.18.1", features = ["macros", "rt", "io-std"] }
url = "2.2.2"
ipfs-api = { version = "0.15.0", git = "https://github.com/xfbs/rust-ipfs-api" }
ipfs-api-backend-hyper = { version = "0.4.0", git = "https://github.com/xfbs/rust-ipfs-api", features = ["with-send-sync"] }
tokio-util = { version = "0.6.5", features = ["io"] }
serde_json = "1.0.81"
