[package]
name = "fractal-storage-tool"
version = "0.2.0"
edition = "2021"
authors = ["Patrick Elsen <patrick@fractalnetworks.co>"]
description = "Command-line utility for Fractal Networks storage service."
license = "AGPL-3.0-only"
repository = "https://github.com/fractalnetworksco/storage"

[dependencies]
anyhow = "1.0.57"
cid = "0.8.4"
env_logger = "0.9.0"
futures = "0.3.21"
reqwest = "0.11.10"
fractal-storage-client = { path = "../client", version = "0.2.0" }
structopt = "0.3.26"
tokio = { version = "1.18.1", features = ["macros", "rt", "io-std"] }
url = "2.2.2"
ipfs-api = { version = "0.16.0" }
ipfs-api-backend-hyper = { version = "0.5.0", features = ["with-send-sync"] }
tokio-util = { version = "0.6.5", features = ["io"] }
serde_json = "1.0.81"
